EM - top image align fix

--- a/assets/css/cta-widget.less
+++ b/assets/css/cta-widget.less
@@ -86,7 +86,7 @@ body {
     }
 
     .icon {
-      vertical-align: top;
+      vertical-align: bottom;
       width: 23px;
       height: 22px;
       margin-left: 15px;
